--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,22 @@
 server.port=8095
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.generate-unique-name=false
+
+
+spring.flyway.url=jdbc:h2:~/test
+spring.flyway.user=sa
+spring.flyway.password=
+spring.flyway.sql-migration-prefix=V
+spring.flyway.repeatable-sql-migration-prefix=R
+spring.flyway.sql-migration-separator=__
+spring.flyway.sql-migration-suffixes=.sql
+
+logging.level.org.hibernate.stat=debug
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
+
