--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.flyway.repeatable-sql-migration-prefix=R
 spring.flyway.sql-migration-separator=__
 spring.flyway.sql-migration-suffixes=.sql
 
-
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
