--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,6 @@ spring.flyway.sql-migration-suffixes=.sql
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
+spring.jpa.show-sql=true
+
 
