--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.4.0</version>
         </dependency>
 
         <dependency>
