--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.flyway.sql-migration-prefix=V
 spring.flyway.repeatable-sql-migration-prefix=R
 spring.flyway.sql-migration-separator=__
 spring.flyway.sql-migration-suffixes=.sql
+server.servlet.session.cookie.same-site=none
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
