--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>swag.rest</groupId>
-    <artifactId>bank_app_delivery</artifactId>
+    <artifactId>aster_todo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>bank_app_delivery</name>
-    <description>bank_app_delivery</description>
+    <name>aster_todo_app</name>
+    <description>aster_todo_app</description>
     <properties>
         <java.version>8</java.version>
     </properties>
